# primitive-pinned

./: .travis.yml  CHANGELOG.md  README.md  primitive-pinned.cabal
src/: PrimitivePinned.hs
src/Data/Primitive/: Pinned.hs
test/: NoSegfaultsPls.hs
