cabal-version: 2.4
name:
  primitive-pinned
version:
  0.1
synopsis:
  bytearrays where pinnedness is tracked at the type level
description:
  bytearrays where pinnedness is tracked at the type level
homepage:
  https://github.com/haskell-primitive/primitive-pinned
bug-reports:
  https://github.com/haskell-primitive/primitive-pinned/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Data
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.3

library
  hs-source-dirs:
    src
  exposed-modules:
    PrimitivePinned
  build-depends:
    , base ^>= 4.12.0.0
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/haskell-primitive/primitive-pinned.git
